[gd_scene load_steps=5 format=2]

[ext_resource path="res://resources/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menu.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/default.tres" type="Theme" id=3]

[sub_resource type="DynamicFont" id=1]
size = 44
use_filter = true
extra_spacing_char = 10
font_data = ExtResource( 1 )

[node name="menu" type="Control"]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 332.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( -524.441, -176.711 )
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="VBoxContainer"]
margin_right = 292.0
margin_bottom = 52.0
rect_rotation = 3.57812
rect_pivot_offset = Vector2( 146, 26 )
custom_fonts/font = SubResource( 1 )
text = "YAFG"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SEPARATOR" type="Control" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 292.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 10 )

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 292.0
margin_bottom = 132.0
text = "Play"

[node name="FullScreenButton" type="Button" parent="VBoxContainer"]
margin_top = 152.0
margin_right = 292.0
margin_bottom = 182.0
text = "Fullscreen Toggle"

[node name="WindSpeedSlider" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 292.0
margin_bottom = 247.0

[node name="label" type="RichTextLabel" parent="VBoxContainer/WindSpeedSlider"]
margin_right = 292.0
margin_bottom = 25.503
rect_min_size = Vector2( 109.14, 25.503 )
size_flags_vertical = 3
text = "Wind Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="HSlider" parent="VBoxContainer/WindSpeedSlider"]
margin_top = 29.0
margin_right = 292.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindDirectionSlider" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 267.0
margin_right = 292.0
margin_bottom = 312.0

[node name="label" type="RichTextLabel" parent="VBoxContainer/WindDirectionSlider"]
margin_right = 292.0
margin_bottom = 25.503
rect_min_size = Vector2( 109.14, 25.503 )
size_flags_vertical = 3
text = "Wind Direction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slider" type="HSlider" parent="VBoxContainer/WindDirectionSlider"]
margin_top = 29.0
margin_right = 292.0
margin_bottom = 45.0
size_flags_horizontal = 3
size_flags_vertical = 3
min_value = -180.0
max_value = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SEPARATOR2" type="Control" parent="VBoxContainer"]
margin_top = 332.0
margin_right = 292.0
margin_bottom = 332.0
size_flags_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 490.0
margin_right = 292.0
margin_bottom = 520.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/WindSpeedSlider/slider" to="." method="_on_wind_speed_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/WindDirectionSlider/slider" to="." method="_on_wind_direction_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
